src/Primaria/.antlr/PrimariaParser.java
// Generated from /home/joao/Desktop/Universidade/2ano/C/bdex-comp-02/src/Primaria/Primaria.g4 by ANTLR 4.8

package Primaria;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrimariaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, Int=54, Real=55, String=56, Variavel=57, Tipo=58, WS=59, LineComment=60, 
		MultilineComment=61;
	public static final int
		RULE_program = 0, RULE_command = 1, RULE_ifcommand = 2, RULE_whilecommand = 3, 
		RULE_forcommand = 4, RULE_defcommand = 5, RULE_commandBlock = 6, RULE_expr = 7, 
		RULE_keyValue = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "command", "ifcommand", "whilecommand", "forcommand", "defcommand", 
			"commandBlock", "expr", "keyValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'if'", "'else'", "'while'", "'for'", "'in'", "'def'", "'('", 
			"','", "')'", "'{'", "'}'", "'['", "']'", "'<'", "'>'", "'str_val'", 
			"'size'", "'=='", "'!='", "'<='", "'>='", "'^'", "'*'", "'/'", "'%'", 
			"'+'", "'-'", "'='", "'set'", "'to'", "'add'", "'first'", "'sort'", "'by'", 
			"'asc'", "'desc'", "'pop'", "'from'", "'check'", "'with'", "'del'", "'print'", 
			"'read_str'", "'read_int'", "'read_real'", "'break'", "'return'", "'import'", 
			"'export'", "'true'", "'false'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "Int", "Real", "String", "Variavel", 
			"Tipo", "WS", "LineComment", "MultilineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Primaria.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PrimariaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__10) | (1L << T__12) | (1L << T__16) | (1L << T__17) | (1L << T__29) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__37) | (1L << T__39) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << Int) | (1L << Real) | (1L << String) | (1L << Variavel) | (1L << Tipo))) != 0)) {
				{
				{
				setState(18);
				command();
				}
				}
				setState(23);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
	 
		public CommandContext() { }
		public void copyFrom(CommandContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WhileCommandContext extends CommandContext {
		public WhilecommandContext whilecommand() {
			return getRuleContext(WhilecommandContext.class,0);
		}
		public WhileCommandContext(CommandContext ctx) { copyFrom(ctx); }
	}
	public static class FuncCommandContext extends CommandContext {
		public DefcommandContext defcommand() {
			return getRuleContext(DefcommandContext.class,0);
		}
		public FuncCommandContext(CommandContext ctx) { copyFrom(ctx); }
	}
	public static class IfCommandContext extends CommandContext {
		public IfcommandContext ifcommand() {
			return getRuleContext(IfcommandContext.class,0);
		}
		public IfCommandContext(CommandContext ctx) { copyFrom(ctx); }
	}
	public static class ForCommandContext extends CommandContext {
		public ForcommandContext forcommand() {
			return getRuleContext(ForcommandContext.class,0);
		}
		public ForCommandContext(CommandContext ctx) { copyFrom(ctx); }
	}
	public static class SingleCommandContext extends CommandContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SingleCommandContext(CommandContext ctx) { copyFrom(ctx); }
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_command);
		try {
			setState(31);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
			case T__10:
			case T__12:
			case T__16:
			case T__17:
			case T__29:
			case T__31:
			case T__32:
			case T__33:
			case T__37:
			case T__39:
			case T__41:
			case T__42:
			case T__43:
			case T__44:
			case T__45:
			case T__46:
			case T__47:
			case T__48:
			case T__49:
			case T__50:
			case T__51:
			case Int:
			case Real:
			case String:
			case Variavel:
			case Tipo:
				_localctx = new SingleCommandContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(24);
				expr(0);
				setState(25);
				match(T__0);
				}
				break;
			case T__1:
				_localctx = new IfCommandContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(27);
				ifcommand();
				}
				break;
			case T__3:
				_localctx = new WhileCommandContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(28);
				whilecommand();
				}
				break;
			case T__4:
				_localctx = new ForCommandContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(29);
				forcommand();
				}
				break;
			case T__6:
				_localctx = new FuncCommandContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(30);
				defcommand();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfcommandContext extends ParserRuleContext {
		public CommandBlockContext elseBlock;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<CommandBlockContext> commandBlock() {
			return getRuleContexts(CommandBlockContext.class);
		}
		public CommandBlockContext commandBlock(int i) {
			return getRuleContext(CommandBlockContext.class,i);
		}
		public IfcommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifcommand; }
	}

	public final IfcommandContext ifcommand() throws RecognitionException {
		IfcommandContext _localctx = new IfcommandContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ifcommand);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			match(T__1);
			setState(34);
			expr(0);
			setState(35);
			commandBlock();
			setState(43);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(36);
					match(T__2);
					setState(37);
					match(T__1);
					setState(38);
					expr(0);
					setState(39);
					commandBlock();
					}
					} 
				}
				setState(45);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(46);
				match(T__2);
				setState(47);
				((IfcommandContext)_localctx).elseBlock = commandBlock();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhilecommandContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public CommandBlockContext commandBlock() {
			return getRuleContext(CommandBlockContext.class,0);
		}
		public WhilecommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whilecommand; }
	}

	public final WhilecommandContext whilecommand() throws RecognitionException {
		WhilecommandContext _localctx = new WhilecommandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_whilecommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(T__3);
			setState(51);
			expr(0);
			setState(52);
			commandBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForcommandContext extends ParserRuleContext {
		public TerminalNode Variavel() { return getToken(PrimariaParser.Variavel, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public CommandBlockContext commandBlock() {
			return getRuleContext(CommandBlockContext.class,0);
		}
		public ForcommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forcommand; }
	}

	public final ForcommandContext forcommand() throws RecognitionException {
		ForcommandContext _localctx = new ForcommandContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_forcommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(T__4);
			setState(55);
			match(Variavel);
			setState(56);
			match(T__5);
			setState(57);
			expr(0);
			setState(58);
			commandBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefcommandContext extends ParserRuleContext {
		public Token funcName;
		public CommandBlockContext commandBlock() {
			return getRuleContext(CommandBlockContext.class,0);
		}
		public List<TerminalNode> Variavel() { return getTokens(PrimariaParser.Variavel); }
		public TerminalNode Variavel(int i) {
			return getToken(PrimariaParser.Variavel, i);
		}
		public DefcommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defcommand; }
	}

	public final DefcommandContext defcommand() throws RecognitionException {
		DefcommandContext _localctx = new DefcommandContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defcommand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__6);
			setState(61);
			((DefcommandContext)_localctx).funcName = match(Variavel);
			setState(62);
			match(T__7);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Variavel) {
				{
				setState(63);
				match(Variavel);
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(64);
					match(T__8);
					setState(65);
					match(Variavel);
					}
					}
					setState(70);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(73);
			match(T__9);
			setState(74);
			commandBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandBlockContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public CommandBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commandBlock; }
	}

	public final CommandBlockContext commandBlock() throws RecognitionException {
		CommandBlockContext _localctx = new CommandBlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_commandBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__10);
			setState(77);
			program();
			setState(78);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BreakCommandExprContext extends ExprContext {
		public BreakCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class TrueExprContext extends ExprContext {
		public TrueExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class TipoExprContext extends ExprContext {
		public TerminalNode Tipo() { return getToken(PrimariaParser.Tipo, 0); }
		public TipoExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ReturnCommandExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class TableDefExprContext extends ExprContext {
		public List<KeyValueContext> keyValue() {
			return getRuleContexts(KeyValueContext.class);
		}
		public KeyValueContext keyValue(int i) {
			return getRuleContext(KeyValueContext.class,i);
		}
		public TableDefExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class OperationExprContext extends ExprContext {
		public Token op;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public OperationExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ReadIntCommandExprContext extends ExprContext {
		public ReadIntCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class PrintCommandExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PrintCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class FirstLineExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FirstLineExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class SimpleTupleExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SimpleTupleExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ImportCommandExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ImportCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class PopCommandExprContext extends ExprContext {
		public TerminalNode Int() { return getToken(PrimariaParser.Int, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PopCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class FalseExprContext extends ExprContext {
		public FalseExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class SizeCommandExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SizeCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class PriorExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PriorExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class SetCommandExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SetCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class IntValueContext extends ExprContext {
		public TerminalNode Int() { return getToken(PrimariaParser.Int, 0); }
		public IntValueContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class SelectColExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SelectColExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class RefColExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public RefColExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class CheckCommandExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public CheckCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class FuncCallExprContext extends ExprContext {
		public TerminalNode Variavel() { return getToken(PrimariaParser.Variavel, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public FuncCallExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ExportCommandExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExportCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class RealValueContext extends ExprContext {
		public TerminalNode Real() { return getToken(PrimariaParser.Real, 0); }
		public RealValueContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class DelCommandExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DelCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ReadStrCommandExprContext extends ExprContext {
		public ReadStrCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class StrValueContext extends ExprContext {
		public TerminalNode String() { return getToken(PrimariaParser.String, 0); }
		public StrValueContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class SelectExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SelectExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class SortCommandExprContext extends ExprContext {
		public Token dir;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SortCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ReadRealCommandExprContext extends ExprContext {
		public ReadRealCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class KVTupleExprContext extends ExprContext {
		public List<KeyValueContext> keyValue() {
			return getRuleContexts(KeyValueContext.class);
		}
		public KeyValueContext keyValue(int i) {
			return getRuleContext(KeyValueContext.class,i);
		}
		public KVTupleExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class AddCommandExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Variavel() { return getToken(PrimariaParser.Variavel, 0); }
		public AddCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class StrValCommandExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StrValCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class InitCommandExprContext extends ExprContext {
		public TerminalNode Variavel() { return getToken(PrimariaParser.Variavel, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public InitCommandExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class VarValueContext extends ExprContext {
		public TerminalNode Variavel() { return getToken(PrimariaParser.Variavel, 0); }
		public VarValueContext(ExprContext ctx) { copyFrom(ctx); }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				_localctx = new StrValCommandExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(81);
				match(T__16);
				setState(82);
				expr(32);
				}
				break;
			case 2:
				{
				_localctx = new SizeCommandExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(83);
				match(T__17);
				setState(84);
				expr(31);
				}
				break;
			case 3:
				{
				_localctx = new FuncCallExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(85);
				match(Variavel);
				setState(86);
				match(T__7);
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__10) | (1L << T__12) | (1L << T__16) | (1L << T__17) | (1L << T__29) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__37) | (1L << T__39) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << Int) | (1L << Real) | (1L << String) | (1L << Variavel) | (1L << Tipo))) != 0)) {
					{
					setState(87);
					expr(0);
					setState(92);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__8) {
						{
						{
						setState(88);
						match(T__8);
						setState(89);
						expr(0);
						}
						}
						setState(94);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(97);
				match(T__9);
				}
				break;
			case 4:
				{
				_localctx = new PriorExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(98);
				match(T__7);
				setState(99);
				expr(0);
				setState(100);
				match(T__9);
				}
				break;
			case 5:
				{
				_localctx = new TableDefExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(102);
				match(T__10);
				setState(103);
				keyValue();
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(104);
					match(T__8);
					setState(105);
					keyValue();
					}
					}
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(111);
				match(T__11);
				}
				break;
			case 6:
				{
				_localctx = new SimpleTupleExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(113);
				match(T__7);
				setState(114);
				expr(0);
				setState(115);
				match(T__8);
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__10) | (1L << T__12) | (1L << T__16) | (1L << T__17) | (1L << T__29) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__37) | (1L << T__39) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << Int) | (1L << Real) | (1L << String) | (1L << Variavel) | (1L << Tipo))) != 0)) {
					{
					setState(116);
					expr(0);
					setState(121);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__8) {
						{
						{
						setState(117);
						match(T__8);
						setState(118);
						expr(0);
						}
						}
						setState(123);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}
